# carloforte

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
carloforte-rs/: Cargo.toml
carloforte-rs/src/: lib.rs
docs/superpowers/plans/: 2026-06-29-rust-islands.md
docs/superpowers/specs/: 2026-06-29-rust-islands-design.md
examples/scripts/: benchmark_islands.py
src/carloforte/: __init__.py  _cli.py  _extract.py  _islands.py  _models.py  _reader.py  _serialiser.py
tests/: test_extract.py  test_islands.py  test_islands_rs.py  test_models.py  test_reader.py  test_serialiser.py
