[project]
name = "apify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GioDecio", email = "giovanni.decillis@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
apify = "apify:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true
