[project]
name = "carloforte"
version = "0.1.2"
description = "Extract structured data from Excel files with minimal token usage"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Giovanni De Cillis", email = "giovanni.decillis@gmail.com" }
]
keywords = ["excel", "xlsx", "llm", "extraction", "json"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pre-commit>=4.6.0",
]

[project.scripts]
carloforte = "carloforte:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "pre-commit>=4.0",
    "mypy>=1.16",
    "openpyxl-stubs",
    "pytest>=8.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true
